src/com/github/mithunder/parser/GuardCommandParser.java
// $ANTLR 3.2 debian-4 GuardCommand.g 2010-10-15 10:11:01

package com.github.mithunder.parser;

import com.github.mithunder.statements.VariableTable;
import com.github.mithunder.statements.StatementFactory;
import com.github.mithunder.statements.AbstractStatement;
import com.github.mithunder.statements.StatementType;
import com.github.mithunder.statements.Value;
import com.github.mithunder.statements.ValueType;
import com.github.mithunder.statements.ConstantValue;
import com.github.mithunder.statements.CodeLocation;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class GuardCommandParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "OR", "ASSIGN", "SEMI", "GREATER_THAN", "GREATER_EQ", "LESS_THAN", "LESS_EQ", "EQ", "NEQ", "PLUS", "MINUS", "MUL", "DIV", "NOT", "RPAREN", "LPAREN", "RCURLY", "LCURLY", "COLON", "IF", "FI", "DO", "OD", "GUARD", "ARROW", "SKIP", "ABORT", "WRITE", "READ", "MODULE", "END", "TRUE", "FALSE", "INTEGER_LITERAL", "IDENTIFIER", "ML_COMMENT", "LINE_COMMENT", "ANNOTATION", "LETTER", "WS"
    };
    public static final int LETTER=43;
    public static final int ANNOTATION=42;
    public static final int DO=26;
    public static final int NOT=18;
    public static final int AND=4;
    public static final int EOF=-1;
    public static final int LPAREN=20;
    public static final int IF=24;
    public static final int ML_COMMENT=40;
    public static final int RPAREN=19;
    public static final int IDENTIFIER=39;
    public static final int GREATER_EQ=9;
    public static final int PLUS=14;
    public static final int EQ=12;
    public static final int ABORT=31;
    public static final int LESS_EQ=11;
    public static final int GREATER_THAN=8;
    public static final int LINE_COMMENT=41;
    public static final int LCURLY=22;
    public static final int MINUS=15;
    public static final int MODULE=34;
    public static final int MUL=16;
    public static final int SEMI=7;
    public static final int TRUE=36;
    public static final int OD=27;
    public static final int WRITE=32;
    public static final int FI=25;
    public static final int SKIP=30;
    public static final int COLON=23;
    public static final int WS=44;
    public static final int NEQ=13;
    public static final int READ=33;
    public static final int INTEGER_LITERAL=38;
    public static final int OR=5;
    public static final int RCURLY=21;
    public static final int LESS_THAN=10;
    public static final int ASSIGN=6;
    public static final int ARROW=29;
    public static final int GUARD=28;
    public static final int DIV=17;
    public static final int END=35;
    public static final int FALSE=37;

    // delegates
    // delegators


        public GuardCommandParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GuardCommandParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[40+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GuardCommandParser.tokenNames; }
    public String getGrammarFileName() { return "GuardCommand.g"; }


    	StatementFactory statementFactory = StatementFactory.newInstance();
    	VariableTable variableTable = VariableTable.newInstance();

        public static void main(String[] args) throws Exception {
        
            GuardCommandLexer lex = new GuardCommandLexer(new ANTLRFileStream(args[0]));
           	CommonTokenStream tokens = new CommonTokenStream(lex);

            GuardCommandParser parser = new GuardCommandParser(tokens);

            try {
            
            	parser.program();
            
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }


    public static class unary_operator_return extends ParserRuleReturnScope {
        public int type;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "unary_operator"
    // GuardCommand.g:94:1: unary_operator returns [int type] : ( NOT | MINUS );
    public final GuardCommandParser.unary_operator_return unary_operator() throws RecognitionException {
        GuardCommandParser.unary_operator_return retval = new GuardCommandParser.unary_operator_return();
        retval.start = input.LT(1);
        int unary_operator_StartIndex = input.index();
        CommonTree root_0 = null;

        Token NOT1=null;
        Token MINUS2=null;

        CommonTree NOT1_tree=null;
        CommonTree MINUS2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // GuardCommand.g:95:2: ( NOT | MINUS )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==NOT) ) {
                alt1=1;
            }
            else if ( (LA1_0==MINUS) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // GuardCommand.g:95:4: NOT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NOT1=(Token)match(input,NOT,FOLLOW_NOT_in_unary_operator453); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NOT1_tree = (CommonTree)adaptor.create(NOT1);
                    adaptor.addChild(root_0, NOT1_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.LOGIC_NOT;
                    }

                    }
                    break;
                case 2 :
                    // GuardCommand.g:96:4: MINUS
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    MINUS2=(Token)match(input,MINUS,FOLLOW_MINUS_in_unary_operator460); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS2_tree = (CommonTree)adaptor.create(MINUS2);
                    adaptor.addChild(root_0, MINUS2_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.SIGN_INVERT;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, unary_operator_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "unary_operator"

    public static class binary_operator_return extends ParserRuleReturnScope {
        public int type;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "binary_operator"
    // GuardCommand.g:99:1: binary_operator returns [int type] : ( AND | OR | GREATER_THAN | GREATER_EQ | LESS_THAN | LESS_EQ | EQ | NEQ | PLUS | MINUS | MUL | DIV );
    public final GuardCommandParser.binary_operator_return binary_operator() throws RecognitionException {
        GuardCommandParser.binary_operator_return retval = new GuardCommandParser.binary_operator_return();
        retval.start = input.LT(1);
        int binary_operator_StartIndex = input.index();
        CommonTree root_0 = null;

        Token AND3=null;
        Token OR4=null;
        Token GREATER_THAN5=null;
        Token GREATER_EQ6=null;
        Token LESS_THAN7=null;
        Token LESS_EQ8=null;
        Token EQ9=null;
        Token NEQ10=null;
        Token PLUS11=null;
        Token MINUS12=null;
        Token MUL13=null;
        Token DIV14=null;

        CommonTree AND3_tree=null;
        CommonTree OR4_tree=null;
        CommonTree GREATER_THAN5_tree=null;
        CommonTree GREATER_EQ6_tree=null;
        CommonTree LESS_THAN7_tree=null;
        CommonTree LESS_EQ8_tree=null;
        CommonTree EQ9_tree=null;
        CommonTree NEQ10_tree=null;
        CommonTree PLUS11_tree=null;
        CommonTree MINUS12_tree=null;
        CommonTree MUL13_tree=null;
        CommonTree DIV14_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // GuardCommand.g:100:2: ( AND | OR | GREATER_THAN | GREATER_EQ | LESS_THAN | LESS_EQ | EQ | NEQ | PLUS | MINUS | MUL | DIV )
            int alt2=12;
            switch ( input.LA(1) ) {
            case AND:
                {
                alt2=1;
                }
                break;
            case OR:
                {
                alt2=2;
                }
                break;
            case GREATER_THAN:
                {
                alt2=3;
                }
                break;
            case GREATER_EQ:
                {
                alt2=4;
                }
                break;
            case LESS_THAN:
                {
                alt2=5;
                }
                break;
            case LESS_EQ:
                {
                alt2=6;
                }
                break;
            case EQ:
                {
                alt2=7;
                }
                break;
            case NEQ:
                {
                alt2=8;
                }
                break;
            case PLUS:
                {
                alt2=9;
                }
                break;
            case MINUS:
                {
                alt2=10;
                }
                break;
            case MUL:
                {
                alt2=11;
                }
                break;
            case DIV:
                {
                alt2=12;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // GuardCommand.g:100:4: AND
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    AND3=(Token)match(input,AND,FOLLOW_AND_in_binary_operator476); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    AND3_tree = (CommonTree)adaptor.create(AND3);
                    adaptor.addChild(root_0, AND3_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.LOGIC_AND;
                    }

                    }
                    break;
                case 2 :
                    // GuardCommand.g:101:4: OR
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    OR4=(Token)match(input,OR,FOLLOW_OR_in_binary_operator484); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    OR4_tree = (CommonTree)adaptor.create(OR4);
                    adaptor.addChild(root_0, OR4_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.LOGIC_OR;
                    }

                    }
                    break;
                case 3 :
                    // GuardCommand.g:102:4: GREATER_THAN
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    GREATER_THAN5=(Token)match(input,GREATER_THAN,FOLLOW_GREATER_THAN_in_binary_operator492); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    GREATER_THAN5_tree = (CommonTree)adaptor.create(GREATER_THAN5);
                    adaptor.addChild(root_0, GREATER_THAN5_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.GT;
                    }

                    }
                    break;
                case 4 :
                    // GuardCommand.g:103:4: GREATER_EQ
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    GREATER_EQ6=(Token)match(input,GREATER_EQ,FOLLOW_GREATER_EQ_in_binary_operator500); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    GREATER_EQ6_tree = (CommonTree)adaptor.create(GREATER_EQ6);
                    adaptor.addChild(root_0, GREATER_EQ6_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.GT_EQ;
                    }

                    }
                    break;
                case 5 :
                    // GuardCommand.g:104:4: LESS_THAN
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    LESS_THAN7=(Token)match(input,LESS_THAN,FOLLOW_LESS_THAN_in_binary_operator508); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_THAN7_tree = (CommonTree)adaptor.create(LESS_THAN7);
                    adaptor.addChild(root_0, LESS_THAN7_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.LT;
                    }

                    }
                    break;
                case 6 :
                    // GuardCommand.g:105:4: LESS_EQ
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    LESS_EQ8=(Token)match(input,LESS_EQ,FOLLOW_LESS_EQ_in_binary_operator516); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_EQ8_tree = (CommonTree)adaptor.create(LESS_EQ8);
                    adaptor.addChild(root_0, LESS_EQ8_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.LT_EQ;
                    }

                    }
                    break;
                case 7 :
                    // GuardCommand.g:106:4: EQ
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    EQ9=(Token)match(input,EQ,FOLLOW_EQ_in_binary_operator524); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EQ9_tree = (CommonTree)adaptor.create(EQ9);
                    adaptor.addChild(root_0, EQ9_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.EQ;
                    }

                    }
                    break;
                case 8 :
                    // GuardCommand.g:107:4: NEQ
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NEQ10=(Token)match(input,NEQ,FOLLOW_NEQ_in_binary_operator532); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NEQ10_tree = (CommonTree)adaptor.create(NEQ10);
                    adaptor.addChild(root_0, NEQ10_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.NEQ;
                    }

                    }
                    break;
                case 9 :
                    // GuardCommand.g:108:4: PLUS
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    PLUS11=(Token)match(input,PLUS,FOLLOW_PLUS_in_binary_operator540); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PLUS11_tree = (CommonTree)adaptor.create(PLUS11);
                    adaptor.addChild(root_0, PLUS11_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.PLUS;
                    }

                    }
                    break;
                case 10 :
                    // GuardCommand.g:109:4: MINUS
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    MINUS12=(Token)match(input,MINUS,FOLLOW_MINUS_in_binary_operator548); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS12_tree = (CommonTree)adaptor.create(MINUS12);
                    adaptor.addChild(root_0, MINUS12_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.MINUS;
                    }

                    }
                    break;
                case 11 :
                    // GuardCommand.g:110:4: MUL
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    MUL13=(Token)match(input,MUL,FOLLOW_MUL_in_binary_operator556); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MUL13_tree = (CommonTree)adaptor.create(MUL13);
                    adaptor.addChild(root_0, MUL13_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.MULTIPLY;
                    }

                    }
                    break;
                case 12 :
                    // GuardCommand.g:111:4: DIV
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    DIV14=(Token)match(input,DIV,FOLLOW_DIV_in_binary_operator564); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    DIV14_tree = (CommonTree)adaptor.create(DIV14);
                    adaptor.addChild(root_0, DIV14_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.type = StatementType.DIVIDE;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, binary_operator_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "binary_operator"

    public static class expression_return extends ParserRuleReturnScope {
        public List<AbstractStatement> statList;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // GuardCommand.g:114:1: expression returns [List<Statement> statList] : (inte= INTEGER_LITERAL | tru= TRUE | fal= FALSE | id= IDENTIFIER | u= unary_operator e= expression | LPAREN e= expression RPAREN ) (b= binary_operator e= expression )* ;
    public final GuardCommandParser.expression_return expression() throws RecognitionException {
        GuardCommandParser.expression_return retval = new GuardCommandParser.expression_return();
        retval.start = input.LT(1);
        int expression_StartIndex = input.index();
        CommonTree root_0 = null;

        Token inte=null;
        Token tru=null;
        Token fal=null;
        Token id=null;
        Token LPAREN15=null;
        Token RPAREN16=null;
        GuardCommandParser.unary_operator_return u = null;

        GuardCommandParser.expression_return e = null;

        GuardCommandParser.binary_operator_return b = null;


        CommonTree inte_tree=null;
        CommonTree tru_tree=null;
        CommonTree fal_tree=null;
        CommonTree id_tree=null;
        CommonTree LPAREN15_tree=null;
        CommonTree RPAREN16_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // GuardCommand.g:115:2: ( (inte= INTEGER_LITERAL | tru= TRUE | fal= FALSE | id= IDENTIFIER | u= unary_operator e= expression | LPAREN e= expression RPAREN ) (b= binary_operator e= expression )* )
            // GuardCommand.g:116:2: (inte= INTEGER_LITERAL | tru= TRUE | fal= FALSE | id= IDENTIFIER | u= unary_operator e= expression | LPAREN e= expression RPAREN ) (b= binary_operator e= expression )*
            {
            root_0 = (CommonTree)adaptor.nil();

            if ( state.backtracking==0 ) {

              		if (retval.statList == null) {
              			retval.statList = new ArrayList<AbstractStatement>();
              		}
              	
            }
            // GuardCommand.g:121:2: (inte= INTEGER_LITERAL | tru= TRUE | fal= FALSE | id= IDENTIFIER | u= unary_operator e= expression | LPAREN e= expression RPAREN )
            int alt3=6;
            switch ( input.LA(1) ) {
            case INTEGER_LITERAL:
                {
                alt3=1;
                }
                break;
            case TRUE:
                {
                alt3=2;
                }
                break;
            case FALSE:
                {
                alt3=3;
                }
                break;
            case IDENTIFIER:
                {
                alt3=4;
                }
                break;
            case MINUS:
            case NOT:
                {
                alt3=5;
                }
                break;
            case LPAREN:
                {
                alt3=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // GuardCommand.g:121:3: inte= INTEGER_LITERAL
                    {
                    inte=(Token)match(input,INTEGER_LITERAL,FOLLOW_INTEGER_LITERAL_in_expression588); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    inte_tree = (CommonTree)adaptor.create(inte);
                    adaptor.addChild(root_0, inte_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.statList.add(statementFactory.createSimpleStatement(
                      			StatementType.ASSIGN,
                      			new CodeLocation(inte_tree.getLine()),
                      			null,
                      			variableTable.createTemporaryVariable(),
                      			ConstantValue.getConstantValue(ValueType.INTEGER_TYPE, Integer.parseInt(inte.getText()))
                      		));
                      		
                    }

                    }
                    break;
                case 2 :
                    // GuardCommand.g:130:4: tru= TRUE
                    {
                    tru=(Token)match(input,TRUE,FOLLOW_TRUE_in_expression599); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    tru_tree = (CommonTree)adaptor.create(tru);
                    adaptor.addChild(root_0, tru_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.statList.add(statementFactory.createSimpleStatement(
                      			StatementType.ASSIGN,
                      			new CodeLocation(tru_tree.getLine()),
                      			null,
                      			variableTable.createTemporaryVariable(),
                      			ConstantValue.TRUE
                      		));
                      		
                    }

                    }
                    break;
                case 3 :
                    // GuardCommand.g:139:4: fal= FALSE
                    {
                    fal=(Token)match(input,FALSE,FOLLOW_FALSE_in_expression610); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    fal_tree = (CommonTree)adaptor.create(fal);
                    adaptor.addChild(root_0, fal_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.statList.add(statementFactory.createSimpleStatement(
                      			StatementType.ASSIGN,
                      			new CodeLocation(fal_tree.getLine()),
                      			null,
                      			variableTable.createTemporaryVariable(),
                      			ConstantValue.FALSE
                      		));
                      		
                    }

                    }
                    break;
                case 4 :
                    // GuardCommand.g:148:4: id= IDENTIFIER
                    {
                    id=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_expression621); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    id_tree = (CommonTree)adaptor.create(id);
                    adaptor.addChild(root_0, id_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.statList.add(statementFactory.createSimpleStatement(
                      			StatementType.ASSIGN,
                      			new CodeLocation(id_tree.getLine()),
                      			null,
                      			variableTable.createTemporaryVariable(),
                      			variableTable.getVariable(id.getText())
                      		));
                      		
                    }

                    }
                    break;
                case 5 :
                    // GuardCommand.g:157:4: u= unary_operator e= expression
                    {
                    pushFollow(FOLLOW_unary_operator_in_expression632);
                    u=unary_operator();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, u.getTree());
                    pushFollow(FOLLOW_expression_in_expression636);
                    e=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
                    if ( state.backtracking==0 ) {

                      		final AbstractStatement newestStat = statementFactory.createSimpleStatement(
                      			u.type,
                      			new CodeLocation(u.tree.getLine()),
                      			null,
                      			variableTable.createTemporaryVariable(),
                      			e.statList.get(e.statList.size()-1).getAssign()
                      		);
                      		retval.statList.addAll(e.statList);
                      		retval.statList.add(newestStat);
                      		
                    }

                    }
                    break;
                case 6 :
                    // GuardCommand.g:169:4: LPAREN e= expression RPAREN
                    {
                    LPAREN15=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_expression645); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LPAREN15_tree = (CommonTree)adaptor.create(LPAREN15);
                    adaptor.addChild(root_0, LPAREN15_tree);
                    }
                    pushFollow(FOLLOW_expression_in_expression649);
                    e=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
                    RPAREN16=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_expression651); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RPAREN16_tree = (CommonTree)adaptor.create(RPAREN16);
                    adaptor.addChild(root_0, RPAREN16_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.statList.addAll(e.statList);
                    }

                    }
                    break;

            }

            // GuardCommand.g:171:2: (b= binary_operator e= expression )*
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // GuardCommand.g:171:3: b= binary_operator e= expression
            	    {
            	    pushFollow(FOLLOW_binary_operator_in_expression662);
            	    b=binary_operator();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, b.getTree());
            	    pushFollow(FOLLOW_expression_in_expression666);
            	    e=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
            	    if ( state.backtracking==0 ) {

            	      			final Value valStart = retval.statList.get(retval.statList.size()-1).getAssign();
            	      			final Value valEnd = e.statList.get(e.statList.size()-1).getAssign();
            	      			retval.statList.addAll(e.statList);
            	      			final AbstractStatement binaryStat = statementFactory.createSimpleStatement(
            	      				b.type, new CodeLocation(b.tree.getLine()),
            	      				null, variableTable.createTemporaryVariable(), valStart, valEnd
            	      			);
            	      			retval.statList.add(binaryStat);
            	      		
            	    }

            	    }
            	    break;
